--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,9 @@ header {
 .menu-header a:hover:not(.botao) {
   font-size: 1.6em;
 }
+.menu-header #font {
+  font-family: 'Courier New', Courier, monospace;
+}
 .whatsapp {
   position: fixed;
   z-index: 2;
